--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,219 @@
+body {
+  position: absolute;
+  background-color: #282c34;
+  height: 100%;
+  min-height: 100%;
+  width: 100%;
+}
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  border: 0;
+}
+
 .App {
   text-align: center;
+  /* max-width: 728px; */
+  margin: 0 auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.panel-container {
+  display: flex;
+  flex-direction: row;
+
+  justify-content: space-around;
+  flex-wrap: nowrap;
+  align-items: stretch;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.panel-left {
+  flex: none;  /* manual resize */
+  background: #353535;
+  overflow: auto;
+}
+.panel-left-mobile {
+  z-index: 10;
+  position: fixed;
+  height: 100%;
+}
+.show {
+  display: block;
+}
+.noFlex {
+  display: inherit;
+}
+.hide {
+  display: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.panel-right {
+  flex: 1; /* resizable */
+  min-height: 0;
+  overflow: hidden; 
+}
+
+.LoginCard {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.App header {
+  background-color: #181717;
+  height: 8vh;
+  min-height: 50px;
+  color: white;
+  position: fixed;
+  width: calc(100% - 200px);
+  /* max-width: 728px; */
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  z-index: 99;
+  padding: 10px;
+  box-sizing: border-box;
+}
+
+.App section {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  min-height: 100vh;
+  background-color: rgb(40, 37, 53);
+}
+
+.ChatInfo{
+  display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 20px;
+    font-weight: 700;
+    border-bottom: 1px solid #ccc;
+}
+
+main {
+  padding: 10px;
+  height: 84vh;
+  margin: 8vh 0 8vh;
+  overflow-y: scroll;
+  display: flex;
+  flex-direction: column;
+}
+
+main::-webkit-scrollbar {
+  width: 0.25rem;
+}
+
+main::-webkit-scrollbar-track {
+  background: #1e1e24;
+}
+
+main::-webkit-scrollbar-thumb {
+  background: #6649b8;
+}
+
+form {
+  width: 100%;
+  font-size: 1rem;
+  margin: auto;
+  padding: 0 10px;
+}
+
+input {
+  /* line-height: 1.5; */
+  width: 100%;
+  /* font-size: 1.5rem;
+  background: rgb(58, 58, 58);
+  color: white;*/
+  font-size: 1rem;
+  outline: none;
+  border: none;
+  padding: 0 10px;
+  border-radius:10px;
+}
+
+.sign-in {
+  color: #282c34;
+  background: white;
+  max-width: 400px;
+  margin: 0 auto;
+}
+
+ul, li {
+  text-align: left;
+  list-style: none;
+}
+
+p {
+  /* max-width: 100px; */
+  margin-bottom: 0px;
+  line-height: 24px;
+  padding: 10px 20px;
+  border-radius: 20px;
+  position: relative;
   color: white;
+  text-align: left;
+}
+.date {
+  text-align: -webkit-center;
+}
+.date p{
+  color: white;
+  background: #353535;
+  width: min-content;
 }
 
-.App-link {
-  color: #61dafb;
+.message {
+  display: flex;
+  align-items: flex-end;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.sent {
+  flex-direction: row-reverse;
+  padding-bottom: 10px;
+}
+
+.received {
+  padding-bottom: 10px;
+}
+
+.sent p {
+  color: white;
+  background: #0b93f6;
+  align-self: flex-end;
+}
+.received p {
+  background: #e5e5ea;
+  color: black;
+}
+#timestamp {
+  background: #ffffff00;
+  color: white;
+  font-size: small;
+  padding: 0 5px;
+}
+
+img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin: 2px 5px;
+}
+
+.text-button{
+  font: inherit;
+    background: none;
+    border: none;
+    padding: 0;
+    margin: 0;
+    text-decoration: underline;
+    display: inline;
+    cursor: pointer;
+    color: #fff;
 }
